src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>request_id__c</fullName>
        <label>Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>st_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stox Trading Account</description>
        <label>Trading Account</label>
        <referenceTo>st_account__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>transaction_time__c</fullName>
        <label>Transaction Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>transaction_type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>